cc.creativecomputing/log/Christian-Riekoffs-MacBook-Pro.local-2011-06-01_22-11-05.txt
[Wed Jun 01 22:11:05 CEST 2011] [CCLog Line:177:initialize] [INFO] logging to file: log/Christian-Riekoffs-MacBook-Pro.local-2011-06-01_22-11-05.txt
[Wed Jun 01 22:11:05 CEST 2011] [CCApp:display] [SEVERE] com.jogamp.opencl.CLException$CLBuildProgramFailureException: 
CLDevice [id: 16918016 name: GeForce 8600M GT type: GPU profile: FULL_PROFILE] build log:
<program source>:265:7: error: conflicting types for 'noise1'
 float noise1(float4 p) {
       ^
<program source>:166:7: note: previous definition is here
 float noise1(float position){
       ^
<program source>:269:7: error: conflicting types for 'noise2'
 float noise2(float4 p) {
       ^
<program source>:181:7: note: previous definition is here
 float noise2(float2 position){
       ^
<program source>:290:27:{290:27-290:66}: error: incompatible type initializing 'float  __attribute__((ext_vector_type(4)))', expected '__float2'
         float2 myNoisePosition = myFuturePosition * theScale + theOffset;
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<program source>:297:13: error: unexpected type name '__float3': expected expression
                 result += float3(noise0(noisePosition), noise1(noisePosition), noise2(noisePosition)) * noiseGains[i];
                           ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:171:18: note: instantiated from:
 #define float3                  __float3
                                 ^
<program source>:297:27: error: use of undeclared identifier 'noisePosition'
                 result += float3(noise0(noisePosition), noise1(noisePosition), noise2(noisePosition)) * noiseGains[i];
                                         ^
<program source>:301:2:{301:2-301:29}{301:30-301:32}: error: assignment to cast is illegal, lvalue casts are not supported
         theAccelerations[myIndex].y += result * theStrength;
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~ [error: CL_BUILD_PROGRAM_FAILURE]
	at com.jogamp.opencl.CLException.newException(CLException.java:78)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:381)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:188)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:182)
	at cc.creativecomputing.particles.forces.CCNoiseField.build(CCNoiseField.java:77)
	at cc.creativecomputing.particles.CCParticles.addForce(CCParticles.java:282)
	at cc.creativecomputing.particles.demo.CCNoiseFieldDemo.setup(CCNoiseFieldDemo.java:34)
	at cc.creativecomputing.CCApp.display(CCApp.java:562)
	at jogamp.opengl.GLDrawableHelper.display(GLDrawableHelper.java:191)
	at javax.media.opengl.awt.GLCanvas$DisplayAction.run(GLCanvas.java:873)
	at jogamp.opengl.GLDrawableHelper.invokeGL(GLDrawableHelper.java:363)
	at javax.media.opengl.awt.GLCanvas.maybeDoSingleThreadedWorkaround(GLCanvas.java:769)
	at javax.media.opengl.awt.GLCanvas.display(GLCanvas.java:388)
	at javax.media.opengl.awt.GLCanvas.paint(GLCanvas.java:487)
	at sun.awt.RepaintArea.paintComponent(RepaintArea.java:276)
	at sun.awt.RepaintArea.paint(RepaintArea.java:241)
	at apple.awt.ComponentModel.handleEvent(ComponentModel.java:263)
	at java.awt.Component.dispatchEventImpl(Component.java:4790)
	at java.awt.Component.dispatchEvent(Component.java:4544)
	at java.awt.EventQueue.dispatchEvent(EventQueue.java:635)
	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:296)
	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:211)
	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:201)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:196)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:188)
	at java.awt.EventDispatchThread.run(EventDispatchThread.java:122)

